boulder/tests/compile_fail/function/ret_ty/consuming_semi.bo
# Mismatched types
# expected `Empty`
# found `u32`
# (8:
# (11:
# ^^^^^^

fn expected_expression(t: u32) -> u32 {
    2 + 3;
    2 - 1;
    t + 2;
}